--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,9 +2,20 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="/css/styles.css">
         <title></title>
     </head>
     <body>
-        Test Test
+        <header class="col-lg-4">
+            <section>
+            lorem ipsum lorem ipsum lorem ipsum
+            </section>
+            <section>
+            lorem ipsum lorem ipsum lorem ipsum
+            </section>
+            <section>
+            lorem ipsum lorem ipsum lorem ipsum
+            </section>
+        </header>
     </body>
 </html>
