--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,16 +6,16 @@
         <title></title>
     </head>
     <body>
-        <header>
+        <header class="row">
+            <section class="col-lg-4">
+            lorem ipsum lorem ipsum lorem ipsum
+            </section>
+            <section class="col-lg-4">
+            lorem ipsum lorem ipsum lorem ipsum
+            </section>
+            <section class="col-lg-4">
+            lorem ipsum lorem ipsum lorem ipsum
+            </section>
         </header>
-            <section class="col-lg-4">
-            lorem ipsum lorem ipsum lorem ipsum
-            </section>
-            <section class="col-lg-4">
-            lorem ipsum lorem ipsum lorem ipsum
-            </section>
-            <section class="col-lg-4">
-            lorem ipsum lorem ipsum lorem ipsum
-            </section>
     </body>
 </html>
