--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="osquibb.github.io/module2-solution/css/styles.css">
         <title></title>
     </head>
     <body>
