--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,8 +2,11 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="osquibb.github.io/module2-solution/css/styles.css">
-        <title></title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Module 2 Solution</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <header class="row">
