--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <header class="row">
-            <section class="col-lg-4 col-md-6">
+            <section class="col-lg-4 col-md-6 col-sm-12">
             lorem ipsum lorem ipsum lorem ipsum
             </section>
-            <section class="col-lg-4 col-md-6">
+            <section class="col-lg-4 col-md-6 col-sm-12">
             lorem ipsum lorem ipsum lorem ipsum
             </section>
-            <section class="col-lg-4 col-md-12">
+            <section class="col-lg-4 col-md-12 col-sm-12">
             lorem ipsum lorem ipsum lorem ipsum
             </section>
         </header>
