--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,16 +9,41 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <header class="row">
+        <header>
+            Our Menu
+        </header>
+        <div class="row">
             <section class="col-lg-4 col-md-6 col-sm-12">
-            lorem ipsum lorem ipsum lorem ipsum
+                <div class="box">
+                    <div class="title">Chicken</div>
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                </div>
+
             </section>
             <section class="col-lg-4 col-md-6 col-sm-12">
-            lorem ipsum lorem ipsum lorem ipsum
+                <div class="box">
+                    <div class="title">Beef</div>
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                </div>
             </section>
             <section class="col-lg-4 col-md-12 col-sm-12">
-            lorem ipsum lorem ipsum lorem ipsum
+                <div class="box">
+                    <div class="title">Sushi</div>
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                lorem ipsum lorem ipsum lorem ipsum
+                </div>
             </section>
-        </header>
+        </div>
     </body>
 </html>
