--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -14,7 +14,7 @@
         </header>
         <div class="row">
             <section class="col-lg-4 col-md-6 col-sm-12">
-                <div class="box">
+                <div class="text">
                     <div class="title">Chicken</div>
                 lorem ipsum lorem ipsum lorem ipsum
                 lorem ipsum lorem ipsum lorem ipsum
@@ -25,7 +25,7 @@
 
             </section>
             <section class="col-lg-4 col-md-6 col-sm-12">
-                <div class="box">
+                <div class="text">
                     <div class="title">Beef</div>
                 lorem ipsum lorem ipsum lorem ipsum
                 lorem ipsum lorem ipsum lorem ipsum
@@ -35,7 +35,7 @@
                 </div>
             </section>
             <section class="col-lg-4 col-md-12 col-sm-12">
-                <div class="box">
+                <div class="text">
                     <div class="title">Sushi</div>
                 lorem ipsum lorem ipsum lorem ipsum
                 lorem ipsum lorem ipsum lorem ipsum
