--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -4,21 +4,60 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <title>Boostrap Starter Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
 
-  <h1>Hello Coursera!</h1>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+          <div class="navbar-brand">Food, LLC</div>
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+      </div>
+
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+              <div class="visible-xs text-center">Chicken</div>
+              <hr class="visible-xs">
+              <div class="visible-xs text-center">Beef</div>
+              <hr class="visible-xs">
+              <div class="visible-xs text-center">Sushi</div>
+
+             <!-- <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="menu-categories.html">
+                  <div class="glyphicon glyphicon-cutlery"></div><br class="visible-xs hidden-md"> Menu</a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="glyphicon glyphicon-info-sign"></div><br class="visible-xs hidden-md"> About</a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="glyphicon glyphicon-certificate"></div><br class="visible-xs hidden-md"> Awards</a>
+              </li>
+            </ul> -->
+
+
+
+          </div>
+
+
+
+    </nav>
+  </header>
+
+
+
+
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
