--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -23,36 +23,29 @@
           </button>
       </div>
 
+      <div class="container">
           <div id="collapsable-nav" class="collapse navbar-collapse">
-              <div class="visible-xs text-center">Chicken</div>
+              <div class="visible-xs text-center menu-item">Chicken</div>
               <hr class="visible-xs">
-              <div class="visible-xs text-center">Beef</div>
+              <div class="visible-xs text-center menu-item">Beef</div>
               <hr class="visible-xs">
-              <div class="visible-xs text-center">Sushi</div>
-
-             <!-- <ul id="nav-list" class="nav navbar-nav navbar-right">
-              <li>
-                <a href="menu-categories.html">
-                  <div class="glyphicon glyphicon-cutlery"></div><br class="visible-xs hidden-md"> Menu</a>
-              </li>
-              <li>
-                <a href="#">
-                  <div class="glyphicon glyphicon-info-sign"></div><br class="visible-xs hidden-md"> About</a>
-              </li>
-              <li>
-                <a href="#">
-                  <div class="glyphicon glyphicon-certificate"></div><br class="visible-xs hidden-md"> Awards</a>
-              </li>
-            </ul> -->
-
-
-
+              <div class="visible-xs text-center menu-item">Sushi</div>
           </div>
-
-
-
+      </div>
     </nav>
   </header>
+
+ <div class="container col-xs-12">
+
+  <h2 id="title" class="text-center">Our Menu</h2>
+    <section id="main-section">
+
+    </section>
+
+
+</div>
+
+
 
 
 
