--- a/Test Sites/Test Site 1/index.html
+++ b/Test Sites/Test Site 1/index.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
 
-    <div id="main-content"></div>
+    <div id="main-content" class="container"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
