--- a/Test Sites/Test Site 1/snippets/image-snippet.html
+++ b/Test Sites/Test Site 1/snippets/image-snippet.html
@@ -1,5 +1,12 @@
-<div class="col-md-3 col-sm-4">
+<!-- <div class="col-md-3 col-sm-4">
   <a href="#" onclick="">
     <div class="image-tile" style="background-color: blue; height: 100px; width: 100px;"></div>
   </a>
+</div> -->
+
+<div class="card col-md-3 col-sm-4" style="width: 18rem;">
+  <img src="images/icon.png" class="card-img-top img-thumbnail" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
 </div>
