--- a/coursera-angularJS/module1-solution/index.html
+++ b/coursera-angularJS/module1-solution/index.html
@@ -7,6 +7,7 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
+    <script src="angularJS/angular.min.js"></script>
   </head>
 <body>
    <div class="container">
