--- a/coursera-angularJS/module1-solution/index.html
+++ b/coursera-angularJS/module1-solution/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="LunchCheck">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,21 +8,22 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
     <script src="angularJS/angular.min.js"></script>
+    <script src="angularJS/app.js"></script>
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller='LunchCheckController'>
      <h1>Lunch Checker</h1>
-
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control"
+             ng-model="lunchMenu">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="checkMenu()">Check If Too Much</button>
          </div>
          <div class="form-group message">
-           <!-- Your message can go here. -->
+           {{message}}
          </div>
    </div>
 
