--- a/coursera-angularJS/module1-solution/index.html
+++ b/coursera-angularJS/module1-solution/index.html
@@ -21,6 +21,7 @@
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkMenu()">Check If Too Much</button>
+             <span>PLEASE NOTE: Empty items (i.e. , , ,) are NOT counted as items</span>
          </div>
          <div class="form-group message">
            {{message}}
