--- a/coursera-angularJS/module3-solution/index.html
+++ b/coursera-angularJS/module3-solution/index.html
@@ -11,14 +11,15 @@
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
     <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+      <input type="text" placeholder="search term" class="form-control" ng-model="narrowCtrl.searchTerm">
     </div>
     <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
+      <button class="btn btn-primary" ng-click="narrowCtrl.searchMenu();">Narrow It Down For Me!</button>
     </div>
 
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+    <div class="clearfix"></div>
+    <found-items search-term="narrowCtrl.searchTerm" found="narrowCtrl.found" on-remove="narrowCtrl.removeItem(itemIndex)"></found-items>
+
   </div>
 
 <script src="angularJS/angular.min.js"></script>
