--- a/coursera-angularJS/module3-solution/index.html
+++ b/coursera-angularJS/module3-solution/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="clearfix"></div>
-    <found-items search-term="narrowCtrl.searchTerm" found="narrowCtrl.found" on-remove="narrowCtrl.removeItem(itemIndex)"></found-items>
+    <found-items found="narrowCtrl.found" on-remove="narrowCtrl.removeItem(itemIndex)"></found-items>
 
   </div>
 
