--- a/coursera-angularJS/module4-solution/index.html
+++ b/coursera-angularJS/module4-solution/index.html
@@ -2,6 +2,7 @@
 <html ng-app="MenuApp">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
     <title></title>
   </head>
   <body>
