--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h2>Ongoing ReactJS Projects<h2>
     <hr>
     <a href="https://osquibb.github.io/sequencer-app/">Custom ReactJS Sound Sequencer</a>
+    <a href="https://github.com/osquibb/sequencer-app">(GitHub Repository)</a>
   </body>
 </html>
