--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <body>
     <h2>Ongoing ReactJS Projects<h2>
     <hr>
+    <div>
     <a href="https://osquibb.github.io/sequencer-app/">Custom ReactJS Sound Sequencer</a>
+    </div>
+    <div>
     <a href="https://github.com/osquibb/sequencer-app">(GitHub Repository)</a>
+  </div>
   </body>
 </html>
