--- a/currentprojects.html
+++ b/currentprojects.html
@@ -15,41 +15,33 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="https://osquibb.github.io/">Home</a>
           <a class="nav-item nav-link active" href="https://osquibb.github.io/currentprojects.html">Current Projects <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link" href="https://osquibb.github.io/contact.html">Contact</a>
         </div>
       </div>
     </nav>
+    <div class="container">
 
-    <div class="bd-example">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    
+      <div id="carouselExampleCaptions" class="carousel slide mt-5" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./public/screen-shots/stepSequencer1.png" class="d-block w-100" alt="...">
+            <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>Text Editor App</h5>
+              <p><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./public/screen-shots/textEditor1.png" class="d-block w-100" alt="...">
+            <img src="./public/screen-shots/stepSequencerImg.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <h5>Step Sequencer App</h5>
+              <p><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="./public/screen-shots/textEditor2.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-          </div>
-        </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -59,9 +51,9 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+    
+
     </div>
-
-
 
 
 
