--- a/currentprojects.html
+++ b/currentprojects.html
@@ -30,7 +30,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-block">
               <h5>Text Editor App</h5>
               <p><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
             </div>
