--- a/currentprojects.html
+++ b/currentprojects.html
@@ -30,9 +30,9 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-block">
-              <h5>Text Editor App</h5>
-              <p><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
+            <div class="carousel-caption">
+              <h5 class="d-none d-md-block">Text Editor App</h5>
+              <p class="d-block"><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
             </div>
           </div>
           <div class="carousel-item">
