--- a/currentprojects.html
+++ b/currentprojects.html
@@ -37,9 +37,9 @@
           </div>
           <div class="carousel-item">
             <img src="./public/screen-shots/stepSequencerImg.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Step Sequencer App</h5>
-              <p><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
+            <div class="carousel-caption">
+              <h5 class="d-none d-md-block">Step Sequencer App</h5>
+              <p class="d-block"><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
             </div>
           </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
