--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="https://osquibb.github.io/">Home</a>
-          <a class="nav-item nav-link" href="https://osquibb.github.io/currentprojects.html">Current Projects</a>
+          <a class="nav-item nav-link" href="https://osquibb.github.io/">Current Projects</a>
           <a class="nav-item nav-link active" href="https://osquibb.github.io/contact.html">Contact <span class="sr-only">(current)</span></a>
         </div>
       </div>
