--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">Thoughtable</a>
@@ -14,15 +13,46 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="https://osquibb.github.io/">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="https://osquibb.github.io/currentprojects.html">Current Projects</a>
+          <a class="nav-item nav-link active" href="https://osquibb.github.io/">Current Projects <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="https://osquibb.github.io/contact.html">Contact</a>
         </div>
       </div>
     </nav>
+    <div class="container">
 
+    
+      <div id="carouselExampleCaptions" class="carousel slide mt-5" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+              <h5 class="d-none d-md-block">Text Editor App</h5>
+              <p class="d-block"><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./public/screen-shots/stepSequencerImg.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+              <h5 class="d-none d-md-block">Step Sequencer App</h5>
+              <p class="d-block"><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
+            </div>
+          </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    
 
-
+    </div>
 
 
 
