--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Thoughtable</a>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <a class="navbar-brand" href="/">Osquibb</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,14 +30,14 @@
           <div class="carousel-item active">
             <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
             <div class="carousel-caption">
-              <h5 class="d-none d-md-block">Text Editor App</h5>
+              <h5 class="d-none d-sm-block">Text Editor App</h5>
               <p class="d-block"><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./public/screen-shots/stepSequencerImg.png" class="d-block w-100" alt="...">
             <div class="carousel-caption">
-              <h5 class="d-none d-md-block">Step Sequencer App</h5>
+              <h5 class="d-none d-sm-block">Step Sequencer App</h5>
               <p class="d-block"><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
             </div>
           </div>
