--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
       </div>
     </nav>
 
-
-
-
+    <div class="container text-center">
+    <a class="btn btn-outline-secondary" href="mailto:osquibb@gmail.com" role="button">Email Me</a>
+    </div>
 
 
     <!-- Optional JavaScript -->
