--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5 class="d-none d-sm-block">Text Editor App</h5>
-              <p class="d-block"><a href="">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
+              <p class="d-block"><a href="https://osquibb.github.io/text-editor-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
             </div>
           </div>
           <div class="carousel-item">
