--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       </div>
     </nav>
 
-    <div class="container text-center">
+    <div class="container text-center mt-5">
     <a class="btn btn-outline-secondary" href="mailto:osquibb@gmail.com" role="button">Email Me</a>
     </div>
 
