--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
+            <div class="carousel-caption" style="margin-bottom: -2%">
               <h5 class="d-none d-sm-block">Text Editor App</h5>
               <p class="d-block"><a href="https://osquibb.github.io/text-editor-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./public/screen-shots/stepSequencerImg.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption">
+            <div class="carousel-caption" style="margin-bottom: -2%">
               <h5 class="d-none d-sm-block">Step Sequencer App</h5>
               <p class="d-block"><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
             </div>
