--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="/">Thoughtable</a>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
+      <a class="navbar-brand" href="/">Oliver Squibb</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,35 +20,34 @@
     </nav>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <div id="carouselExampleCaptions" class="carousel slide mt-4" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./public/screen-shots/textEditorImg.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption" style="margin-bottom: -2%">
-                  <h5 class="d-none d-sm-block">Text Editor App</h5>
-                  <p class="d-block"><a href="https://osquibb.github.io/text-editor-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/text-editor-app">Repository</a></p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./public/screen-shots/stepSequencerImg.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption" style="margin-bottom: -2%">
-                  <h5 class="d-none d-sm-block">Step Sequencer App</h5>
-                  <p class="d-block"><a href="https://osquibb.github.io/sequencer-app/">Try it out!</a> / / GitHub : <a href="https://github.com/osquibb/sequencer-app">Repository</a></p>
-                </div>
-              </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+        <div class="col-xs-3">
+          <div class="card m-3" style="width: 18rem;">
+            <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="card m-3" style="width: 18rem;">
+            <img src="https://osquibb.github.io/public/screen-shots/stepSequencerImg.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="card m-3" style="width: 18rem;">
+            <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
           </div>
         </div>
       </div>
