--- a/index.html
+++ b/index.html
@@ -22,31 +22,59 @@
       <div class="row justify-content-center">
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top" alt="...">
+            <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top bg-light" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Article Manager App</h5>
+              <p class="card-text">Search Wikipedia.  Drag and drop from multi-page search results into different folders.</p>
+              <p class="card-text"><strong>Technology:</strong>
+                 <ul>
+                   <li>React</li>
+                   <li>JavaScript</li>
+                   <li>React-beautiful-dnd (npm)</li>
+                   <li>Wikipedia API</li>
+                   <li>CSS</li>
+                 </ul>
+              </p>
+              <a href="https://osquibb.github.io/article-manager-app/" target="_blank" class="btn btn-primary">Live Demo</a>
+              <a href="https://github.com/osquibb/article-manager-app" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
         </div>
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <img src="https://osquibb.github.io/public/screen-shots/stepSequencerImg.png" class="card-img-top" alt="...">
+            <img src="https://osquibb.github.io/public/screen-shots/stepSequencerImg.png" class="card-img-top bg-light" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Step Sequencer App</h5>
+              <p class="card-text">Fully customizable polyphonic step sequencer.  Capable of live play - add or remove steps on the fly.</p>
+              <p class="card-text"><strong>Technology:</strong>
+                 <ul>
+                   <li>React</li>
+                   <li>JavaScript</li>
+                   <li>HowlerJS (npm)</li>
+                   <li>CSS</li>
+                 </ul>
+              </p>
+              <a href="https://osquibb.github.io/sequencer-app/" target="_blank" class="btn btn-primary">Live Demo</a>
+              <a href="https://github.com/osquibb/sequencer-app" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
         </div>
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top" alt="...">
+            <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top bg-light" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Text Editor App</h5>
+              <p class="card-text">A text editor with formatting options (+ keyboard shortcuts) and a folder for saving and loading files.</p>
+              <p class="card-text"><strong>Technology:</strong>
+                 <ul>
+                   <li>React</li>
+                   <li>JavaScript</li>
+                   <li>DraftJS (npm)</li>
+                   <li>CSS</li>
+                 </ul>
+              </p>
+              <a href="https://osquibb.github.io/text-editor-app/" target="_blank" class="btn btn-primary">Live Demo</a>
+              <a href="https://github.com/osquibb/text-editor-app" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
         </div>
