--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="/">Thoughtable</a>
+      <a class="navbar-brand" href="/">Oliver Squibb</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
