--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="https://osquibb.github.io/">Current Projects <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="https://github.com/osquibb/" target="_blank">GitHub</a>
           <a class="nav-item nav-link" href="https://osquibb.github.io/contact.html">Contact</a>
         </div>
       </div>
