--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="https://osquibb.github.io/">Current Projects</a>
           <a class="nav-item nav-link" href="https://github.com/osquibb/" target="_blank">GitHub</a>
+          <a class="nav-item nav-link" href="https://osquibb.github.io/public/docs/resume.pdf">Resume</a>
           <a class="nav-item nav-link active" href="https://osquibb.github.io/contact.html">Contact <span class="sr-only">(current)</span></a>
         </div>
       </div>
@@ -23,7 +24,7 @@
 
     <div class="container text-center mt-5 font-weight-light">
     <p>Oliver Squibb - Asheville, NC</p>
-    <a class="btn btn-outline-secondary" href="mailto:osquibb@gmail.com" role="button">Email Me</a>
+    <a class="btn btn-primary" href="mailto:osquibb@gmail.com" role="button">Email Me</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
