--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="https://osquibb.github.io/">Current Projects <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="https://github.com/osquibb/" target="_blank">GitHub</a>
-          <a class="nav-item nav-link" href="https://osquibb.github.io/public/docs/resume.pdf">Resume</a>
+          <a class="nav-item nav-link" href="https://osquibb.github.io/public/docs/resume.pdf" target="_blank">Resume</a>
           <a class="nav-item nav-link" href="https://osquibb.github.io/contact.html">Contact</a>
         </div>
       </div>
