--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="https://osquibb.github.io/">Current Projects</a>
           <a class="nav-item nav-link" href="https://github.com/osquibb/" target="_blank">GitHub</a>
-          <a class="nav-item nav-link" href="https://osquibb.github.io/public/docs/resume.pdf">Resume</a>
+          <a class="nav-item nav-link" href="https://osquibb.github.io/public/docs/resume.pdf" target="_blank">Resume</a>
           <a class="nav-item nav-link active" href="https://osquibb.github.io/contact.html">Contact <span class="sr-only">(current)</span></a>
         </div>
       </div>
