bg color change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="row justify-content-center">
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top bg-light" alt="...">
+          <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top" style="background-color:#f2f9f9" alt="...">
             <div class="card-body">
               <h5 class="card-title">Article Manager App</h5>
               <p class="card-text">Search Wikipedia.  Drag and drop from multi-page search results into different folders.</p>
