--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <div class="row justify-content-center">
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-          <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top" style="background-color:#f2f9f9" alt="...">
+          <a href="https://osquibb.github.io/article-manager-app/" target="_blank">
+            <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top" style="background-color:#f2f9f9" alt="...">
+          </a>
             <div class="card-body">
               <h5 class="card-title">Article Manager App</h5>
               <p class="card-text">Search Wikipedia.  Drag and drop from multi-page search results into different folders.</p>
@@ -44,7 +46,9 @@
         </div>
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <img src="https://osquibb.github.io/public/screen-shots/stepSequencerImg.png" class="card-img-top bg-light" alt="...">
+            <a href="https://osquibb.github.io/sequencer-app/" target="_blank">
+              <img src="https://osquibb.github.io/public/screen-shots/stepSequencerImg.png" class="card-img-top" style="background-color:#f2f9f9" alt="...">
+            </a>
             <div class="card-body">
               <h5 class="card-title">Step Sequencer App</h5>
               <p class="card-text">Fully customizable polyphonic step sequencer.  Capable of live play - add or remove steps on the fly.</p>
