--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
           <a href="https://osquibb.github.io/article-manager-app/" target="_blank">
-            <img src="https://osquibb.github.io/public/screen-shots/fileManagerImg.png" class="card-img-top" style="background-color:#f2f9f9" alt="...">
+            <img src="https://osquibb.github.io/public/screen-shots/articleManagerImg.png" class="card-img-top" style="background-color:#f2f9f9" alt="...">
           </a>
             <div class="card-body">
               <h5 class="card-title">Article Manager App</h5>
@@ -68,7 +68,9 @@
         </div>
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top bg-light" alt="...">
+            <a href="https://osquibb.github.io/text-editor-app/" target="_blank">
+              <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top bg-light" alt="...">
+            </a>
             <div class="card-body">
               <h5 class="card-title">Text Editor App</h5>
               <p class="card-text">A text editor with formatting options (+ keyboard shortcuts) and a folder for saving and loading files.</p>
