--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
             <a href="https://osquibb.github.io/text-editor-app/" target="_blank">
-              <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top bg-light" style="background-color:#F7F7F5" alt="...">
+              <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top" style="background-color:#F7F7F5" alt="...">
             </a>
             <div class="card-body">
               <h5 class="card-title">Text Editor App</h5>
