--- a/index.html
+++ b/index.html
@@ -87,6 +87,27 @@
             </div>
           </div>
         </div>
+        <div class="col-xs-3">
+          <div class="card m-3" style="width: 18rem;">
+            <a href="https://osquibb.github.io/text-editor-app/" target="_blank">
+              <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top" style="background-color:#F7F7F5" alt="...">
+            </a>
+            <div class="card-body">
+              <h5 class="card-title">Text Editor App</h5>
+              <p class="card-text">A text editor with formatting options (+ keyboard shortcuts) and a folder for saving and loading files.</p>
+              <p class="card-text"><strong>Technology:</strong>
+                 <ul>
+                   <li>React</li>
+                   <li>JavaScript</li>
+                   <li>DraftJS (npm)</li>
+                   <li>CSS</li>
+                 </ul>
+              </p>
+              <a href="https://osquibb.github.io/text-editor-app/" target="_blank" class="btn btn-primary">Live Demo</a>
+              <a href="https://github.com/osquibb/text-editor-app" target="_blank" class="btn btn-secondary">GitHub</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
