--- a/index.html
+++ b/index.html
@@ -68,22 +68,23 @@
         </div>
         <div class="col-xs-3">
           <div class="card m-3" style="width: 18rem;">
-            <a href="https://osquibb.github.io/text-editor-app/" target="_blank">
-              <img src="https://osquibb.github.io/public/screen-shots/textEditorImg.png" class="card-img-top" style="background-color:#F7F7F5" alt="...">
+            <a href="https://osquibb.github.io/trading-app/" target="_blank">
+              <img src="https://osquibb.github.io/public/screen-shots/tradingAppImg.png" class="card-img-top" style="background-color:#F7F7F5" alt="...">
             </a>
             <div class="card-body">
-              <h5 class="card-title">Text Editor App</h5>
-              <p class="card-text">A text editor with formatting options (+ keyboard shortcuts) and a folder for saving and loading files.</p>
+              <h5 class="card-title">Trading App</h5>
+              <p class="card-text">A Stock and Currency Trading App.  Capable of live stock quotes, currencies and custom time ranges.</p>
               <p class="card-text"><strong>Technology:</strong>
                  <ul>
                    <li>React</li>
                    <li>JavaScript</li>
-                   <li>DraftJS (npm)</li>
+                   <li>ChartJS (npm)</li>
+                   <li>Alpha Vantage API</li>
                    <li>CSS</li>
                  </ul>
               </p>
-              <a href="https://osquibb.github.io/text-editor-app/" target="_blank" class="btn btn-primary">Live Demo</a>
-              <a href="https://github.com/osquibb/text-editor-app" target="_blank" class="btn btn-secondary">GitHub</a>
+              <a href="https://osquibb.github.io/trading-app/" target="_blank" class="btn btn-primary">Live Demo</a>
+              <a href="https://github.com/osquibb/trading-app/" target="_blank" class="btn btn-secondary">GitHub</a>
             </div>
           </div>
         </div>
