--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">Trading App</h5>
-              <p class="card-text">A Stock and Currency Trading App.  Capable of live stock quotes, currencies and custom time ranges.</p>
+              <p class="card-text">A Stock and Currency Trading App.  Live FX and stock quotes with custom date ranges.</p>
               <p class="card-text"><strong>Technology:</strong>
                  <ul>
                    <li>React</li>
